# step_motor_adj

./: CMakeLists.txt  README.md  sdkconfig
SGP40/: sgp40_voc_index.c
app/: 74HC595.c  74HC595.h  SGP40_SHT40.c  SGP40_SHT40.h  eeprom.c  eeprom.h  htr3218.c  htr3218.h  htr3236.c  htr3236.h  ir_nec_transceiver.c  ir_nec_transceiver.h  motor.c  motor.h  my_adc.c  my_adc.h  my_gptimer.c  my_gptimer.h  my_i2c_master.c  my_i2c_master.h  my_uart.c  my_uart.h  pcnt.c  pcnt.h  step_motor.c  step_motor.h
main/: CMakeLists.txt  main.c
